--- a/DBAPPI/DBMenu1.1.html
+++ b/DBAPPI/DBMenu1.1.html
@@ -13,14 +13,14 @@
 	</head>
 
 	<body> 
-		<p><img src = "C:\Users\CSSR\Desktop\background.png" class = "background_image"/></p>
+		<p><img src = "background.png" class = "background_image"/></p>
 		<p class = "text"; style = "width: 100%; text-align: center; font-size: 20pt; color: white"> Main Menu </p>
 		
 			
 			<div
 				<p style = "display: inline-block; z-index: 2">
 				<a href = "Inventory.html">
-				<img src = "C:\Users\CSSR\Desktop\inventory.png" height = "256" width = "256" />
+				<img src = "inventory.png" height = "256" width = "256" />
 				<p style = "text-align: center; color: white"> Inventory </p>
 				</a>
 			</div>
@@ -28,7 +28,7 @@
 			<div
 				<p style = "display: inline-block; z-index: 2">
 				<a href = "Stores.html">
-				<img src = "C:\Users\CSSR\Desktop\stores.png" height = "256" width = "256" />
+				<img src = "stores.png" height = "256" width = "256" />
 				<p style = "text-align: center; color: white"> Stores </p>
 				</a>
 			</div>
@@ -36,7 +36,7 @@
 			<div
 				<p style = "display: inline-block; z-index: 2">
 				<a href = "Customers.html">
-				<img src = "C:\Users\CSSR\Desktop\customers.png" height = "256" width = "256" />
+				<img src = "customers.png" height = "256" width = "256" />
 				<p style = "text-align: center; color: white">Customers </p>
 				</a>
 			</div>
@@ -44,7 +44,7 @@
 			<div
 				<p style = "display: inline-block; z-index: 2">
 				<a href = "Transactions.html">
-				<img src = "C:\Users\CSSR\Desktop\transactions.png" height = "256" width = "256" />
+				<img src = "transactions.png" height = "256" width = "256" />
 				<p style = "text-align: center; color: white"> Transactions </p>
 				</a>
 			</div>	
@@ -52,7 +52,7 @@
 			<div
 				<p style = "display: inline-block; z-index: 2">
 				<a href = "Employees.html">
-				<img src = "C:\Users\CSSR\Desktop\employees.png" height = "256" width = "256" />
+				<img src = "employees.png" height = "256" width = "256" />
 				<p style = "text-align: center; color: white"> Employees </p>
 				</a>
 			</div>	
