--- a/DBAPPI/Inventory.html
+++ b/DBAPPI/Inventory.html
@@ -20,7 +20,7 @@
 
 	
 	<body>
-		<p><img src = "C:\Users\CSSR\Desktop\background2.jpg" class = "background_image"/></p>
+		<p><img src = "background2.jpg" class = "background_image"/></p>
 
 		<p style = "width: 100%; text-align: center; color: white;font-size: 20pt"> Inventory </p>
 		
@@ -33,7 +33,7 @@
 		<p>
 			<p style = "position: absolute; top: 550px; left: 600px">
 				<a href = "DBMenu1.1.html">
-				<img src = "C:\Users\CSSR\Desktop\MainMenu.png" height = "256" width = "256" />
+				<img src = "MainMenu.png" height = "256" width = "256" />
 				</a>
 		</p>	
 		</p>
