--- a/DBAPPI/Stores.html
+++ b/DBAPPI/Stores.html
@@ -20,7 +20,7 @@
 
 	
 	<body>
-		<p><img src = "C:\Users\CSSR\Desktop\background3.jpg" class = "background_image"/></p>
+		<p><img src = "background3.jpg" class = "background_image"/></p>
 		<p style = "width: 100%; text-align: center; font-size: 20pt; color: white"> Stores </p>
 		
 		<p style = "position: absolute; top: 400px; left: 450px; display: inline-block">
@@ -31,7 +31,7 @@
 		<p>
 			<p style = "position: absolute; top: 550px; left: 600px">
 				<a href = "DBMenu1.1.html">
-				<img src = "C:\Users\CSSR\Desktop\MainMenu.png" height = "256" width = "256" />
+				<img src = "MainMenu.png" height = "256" width = "256" />
 				</a>
 		</p>
 		</p>
